| Summary: | ASTERISK-25665: Duplicate logging in queue log for EXITEMPTY events | ||||||
| Reporter: | Ove Aursand (aurs) | Labels: | |||||
| Date Opened: | 2016-01-07 09:45:53.000-0600 | Date Closed: | 2017-05-22 04:54:04 | ||||
| Priority: | Minor | Regression? | |||||
| Status: | Closed/Complete | Components: | Applications/app_queue | ||||
| Versions: | 1.8.32.3 13.6.0 | Frequency of Occurrence | Constant | ||||
| Related Issues: |
| ||||||
| Environment: | Attachments: | ||||||
| Description: | How to reproduce:
Create a queue without members and place a call in the queue. The queue needs "leavewhenempty" set to yes. Generates something like this in the log: {noformat} 1452163740|1452163738.3|que0120550|NONE|ENTERQUEUE||+4721074800|1 1452163740|1452163738.3|que0120550|NONE|EXITEMPTY|1|1|0 1452163740|1452163738.3|que0120550|NONE|EXITEMPTY|1|1|0 {noformat} ast_log for EXITEMPTY is called in queue_exec and also wait_our_turn. To me it looks like it's the same issue in the source code for 13.6.0 as well, but I haven't tested on that version. Removing the ast_log line in wait_our_turn fixed the issue for me. | ||||||
| Comments: | By: Asterisk Team (asteriskteam) 2016-01-07 09:45:54.773-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Rusty Newton (rnewton) 2016-01-14 07:50:34.062-0600 Yeah I see the same issue. Thanks for the report. By: Rusty Newton (rnewton) 2016-01-14 07:53:23.949-0600 By the way - 1.8.X is completely EOL so there is no longer any support for it. You should be moving to 11 or 13 at this point. Thanks! https://wiki.asterisk.org/wiki/display/AST/Asterisk+Versions By: Ivan Poddubny (ipoddubny) 2017-05-11 02:39:41.602-0500 I've submitted a patch that should fix it: https://gerrit.asterisk.org/#/c/5617/ By: Friendly Automation (friendly-automation) 2017-05-22 04:54:05.811-0500 Change 5638 merged by Jenkins2: app_queue: Fix duplicate queue_log entries for EXITEMPTY and ABANDON [https://gerrit.asterisk.org/5638|https://gerrit.asterisk.org/5638] By: Friendly Automation (friendly-automation) 2017-05-22 05:01:04.645-0500 Change 5637 merged by Jenkins2: app_queue: Fix duplicate queue_log entries for EXITEMPTY and ABANDON [https://gerrit.asterisk.org/5637|https://gerrit.asterisk.org/5637] By: Friendly Automation (friendly-automation) 2017-05-22 05:39:00.398-0500 Change 5617 merged by Joshua Colp: app_queue: Fix duplicate queue_log entries for EXITEMPTY and ABANDON [https://gerrit.asterisk.org/5617|https://gerrit.asterisk.org/5617] By: Friendly Automation (friendly-automation) 2020-09-01 10:08:53.652-0500 Change 14884 merged by Friendly Automation: app_queue: Fix leave-empty not recording a call as abandoned [https://gerrit.asterisk.org/c/asterisk/+/14884|https://gerrit.asterisk.org/c/asterisk/+/14884] By: Friendly Automation (friendly-automation) 2020-09-01 10:14:43.187-0500 Change 14821 merged by Friendly Automation: app_queue: Fix leave-empty not recording a call as abandoned [https://gerrit.asterisk.org/c/asterisk/+/14821|https://gerrit.asterisk.org/c/asterisk/+/14821] By: Friendly Automation (friendly-automation) 2020-09-01 10:15:34.029-0500 Change 14811 merged by Friendly Automation: app_queue: Fix leave-empty not recording a call as abandoned [https://gerrit.asterisk.org/c/asterisk/+/14811|https://gerrit.asterisk.org/c/asterisk/+/14811] By: Friendly Automation (friendly-automation) 2020-09-01 10:16:04.882-0500 Change 14822 merged by Friendly Automation: app_queue: Fix leave-empty not recording a call as abandoned [https://gerrit.asterisk.org/c/asterisk/+/14822|https://gerrit.asterisk.org/c/asterisk/+/14822] By: Friendly Automation (friendly-automation) 2020-09-01 10:49:41.791-0500 Change 14823 merged by Kevin Harwell: app_queue: Fix leave-empty not recording a call as abandoned [https://gerrit.asterisk.org/c/asterisk/+/14823|https://gerrit.asterisk.org/c/asterisk/+/14823] | ||||||